basis to cmake install library with include, lib and executable

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -10,7 +10,7 @@ find_path( AUTOMATA_ROOT_DIR NAMES src PATHS ${CMAKE_PARENT_PATH} )
 
 ######################################
 set(CMAKE_CONFIGURATION_TYPES Debug Release CACHE STRING INTERNAL FORCE)
-set(CMAKE_INSTALL_PREFIX ${AUTOMATA_ROOT_DIR} CACHE STRING INTERNAL FORCE)
+#set(CMAKE_INSTALL_PREFIX ${AUTOMATA_ROOT_DIR} CACHE STRING INTERNAL FORCE)
 
 set( AUTOMATA_SRC_DIR ${AUTOMATA_ROOT_DIR}/src )
 
