use of common and eg driver like command line

--- a/cmake/auto/CMakeLists.txt
+++ b/cmake/auto/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 cmake_minimum_required(VERSION 3.14.2)
 
+#get common
+include( ${AUTOMATA_ROOT_DIR}/cmake/common_include.cmake )
+
 #get boost
 include( ${AUTOMATA_ROOT_DIR}/cmake/boost_include.cmake )
 
@@ -9,6 +12,7 @@ include( ${AUTOMATA_ROOT_DIR}/cmake/auto/auto_include.cmake )
 
 set( AUTOMATA_SOURCES
     ${AUTOMATA_SRC_DIR}/main.cpp
+    ${AUTOMATA_SRC_DIR}/command_generate.cpp
     )
     
 add_executable( auto 
@@ -16,6 +20,8 @@ add_executable( auto
 				)
 
 set_target_properties( auto PROPERTIES DEBUG_POSTFIX d )
+
+target_link_libraries( auto commonlib.lib )
 
 link_boost( auto filesystem )
 link_boost( auto iostreams )
