--- a/cmake/tests/CMakeLists.txt
+++ b/cmake/tests/CMakeLists.txt
@@ -27,9 +27,11 @@ add_executable( automata_tests
                 
 set_target_properties( automata_tests PROPERTIES DEBUG_POSTFIX d )
 
-link_boost( automata_tests filesystem )
-link_boost( automata_tests iostreams )
-link_boost( automata_tests serialization )
+link_boost( auto GRAPH )
+link_boost( auto REGEX )
+link_boost( auto FILESYSTEM )
+link_boost( auto IOSTREAMS )
+link_boost( auto SERIALIZATION )
 
 link_gtest( automata_tests )
 link_gtest_main( automata_tests )
